kube-wordpress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-alphawolf 
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/proxy-body-size: "64m"
    nginx.org/client-max-body-size: "64m"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    ingress.kubernetes.io/backend-protocol: "HTTPS"
    ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: alphawolfbeard.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 443
  - host: www.alphawolfbeard.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 443
  - host: alphawolfbeards.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 443
  - host: www.alphawolfbeards.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 443
  tls:
  - hosts:
    - alphawolfbeard.com
    - www.alphawolfbeard.com
    secretName: alphawolf-tls
